Criado classes de comunicação Criado uma abstração para comunicação

--- a/src/DFeSoapNet/DFeSoapNet.csproj
+++ b/src/DFeSoapNet/DFeSoapNet.csproj
@@ -42,5 +42,6 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <Import Project="..\Shared.DFeSoapNet\Shared.DFeSoapNet.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
