--- a/src/DFeSoapNetStandard/DFeSoapNetStandard.csproj
+++ b/src/DFeSoapNetStandard/DFeSoapNetStandard.csproj
@@ -4,4 +4,6 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <Import Project="..\Shared.DFeSoapNet\Shared.DFeSoapNet.projitems" Label="Shared" />
+
 </Project>
